--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,9 @@ cython_debug/
 # OS
 .DS_Store
 Thumbs.db
+
+
+best_vesselmnist3d_model.h5
+best_vesselmnist3d_BALANCED.h5
+best_vesselmnist3d_BALANCED_SIMPLE.h5
+logs/
